--- a/ajax/CargadorFicherosAJAX/index.html
+++ b/ajax/CargadorFicherosAJAX/index.html
@@ -8,23 +8,56 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <style type="text/css">
         body {
             margin: 2rem;
         }
     </style>
+    <script type="text/javascript">
+        function obtenerInformacion() {
+            if (window.XMLHttpRequest) {
+                peticion_http = new XMLHttpRequest();
+            } else if (window.ActiveXObject) {
+                peticion_http = new ActiveXObject("Microsoft.XMLHTTP");
+            }
+            peticion_http.onreadystatechange = () => {
+                if (peticion_http.readyState == 4 && peticion_http.status == 200) {
+                    let elemento = document.getElementById("aniadir");
+                    let res = JSON.parse(peticion_http.responseText);
+                    res.forEach(value => {
+                        elemento.innerHTML+=`
+                            <tr>
+                                <td>${value.city}</td>
+                                <td>${value.description}</td>
+                                <td>${value.ranking}</td>
+                            </tr>
+                        `
+                    });
+                }
+            };
+            peticion_http.open("GET", "marcadores.json");
+            peticion_http.send(null);
+        }
+
+        window.onload = function () {
+            document.getElementById("btnJson").onclick = obtenerInformacion
+        }
+    </script>
 </head>
 
 <body>
     <div>
-        <button>JSON</button>
+        <button id="btnJson">JSON</button>
         <table>
-            <tr>
+            <thead>
                 <th>Ciudad</th>
                 <th>Descripcion</th>
                 <th>Ranking</th>
-            </tr>
+            </thead>
+            <tbody id="aniadir">
+            </tbody>
         </table>
     </div>
 </body>
