--- a/combos/index.html
+++ b/combos/index.html
@@ -97,9 +97,13 @@
 
 					municipioArray = minicipios;
 					console.log(municipiosArray);
+
+					// lista.options.
 				}
 			}
 		}
+
+
 	</script>
 </head>
 
